[gd_scene load_steps=2 format=3 uid="uid://gjxxe65f5hjl"]

[ext_resource type="Script" path="res://Gameplay/Scenes/NewGame/NewGame.gd" id="1_imyka"]

[node name="NewGame" type="Node2D"]
script = ExtResource("1_imyka")

[node name="PlayBotButton" type="Button" parent="."]
offset_left = 363.0
offset_top = 181.0
offset_right = 421.0
offset_bottom = 212.0
text = "VS Bot"

[node name="PlayHumanButton" type="Button" parent="."]
offset_left = 531.0
offset_top = 181.0
offset_right = 619.0
offset_bottom = 212.0
text = "VS Human"

[node name="ManageDeckButton" type="Button" parent="."]
offset_left = 385.0
offset_top = 325.0
offset_right = 580.0
offset_bottom = 356.0
text = "Manage My Team (decks)"

[node name="BackButton" type="Button" parent="."]
offset_left = 128.0
offset_top = 569.0
offset_right = 197.0
offset_bottom = 600.0
text = "<-- Back"
